# protobuf-emscripten

./: .gitignore  README.md  Readme.md
2.6.1/: .gitignore  autogen.sh
2.6.1/src/: Makefile.am
2.6.1/src/google/protobuf/stubs/: atomicops.h  common.cc
3.1.0/: .gitignore
3.1.0/src/: Makefile.am
3.1.0/src/google/protobuf/stubs/: atomicops.h  atomicops_internals_emscripten.h  common.cc  platform_macros.h  port.h
patches/2.6/: 0001-stubs.patch  0002-protoc.patch
patches/3.1/: 0001-stubs.patch  0002-protoc.patch
src/google/protobuf/stubs/: atomicops.h  atomicops_internals_emscripten.h  common.cc  hash.h  platform_macros.h
